Of course, a typo.

--- a/pod-demos-on-nxos/random-demo-pod.yml
+++ b/pod-demos-on-nxos/random-demo-pod.yml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: demo_pod
+        app: demo-pod
     spec:
       hostNetwork: true
       containers:
