Add hostNetwork requirement to DaemonSet

--- a/pod-demos-on-nxos/daemonset-demo-pod.yml
+++ b/pod-demos-on-nxos/daemonset-demo-pod.yml
@@ -11,6 +11,7 @@ spec:
       labels:
         name: demo-ds
     spec:
+      hostNetwork: true
       containers:
       - name: demo-ds
         image: gvevsetim/demo_pod_container:1
